<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_banner_message_dismiss">Dismiss</string>
    <string name="accessibility_data_one_bar">Data one bar.</string>
    <string name="accessibility_data_signal_full">Data signal full.</string>
    <string name="accessibility_data_three_bars">Data three bars.</string>
    <string name="accessibility_data_two_bars">Data two bars.</string>
    <string name="accessibility_display_daltonizer_preference_subtitle">Color correction can be helpful when you want to:&lt;br/> &lt;ol> &lt;li>&amp;nbsp;See colors more accurately&lt;/li> &lt;li>&amp;nbsp;Remove colors to help you focus&lt;/li> &lt;/ol></string>
    <string name="accessibility_display_daltonizer_preference_title">Color correction</string>
    <string name="accessibility_ethernet_connected">Ethernet.</string>
    <string name="accessibility_ethernet_disconnected">Ethernet disconnected.</string>
    <string name="accessibility_manual_zen_less_time">Less time.</string>
    <string name="accessibility_manual_zen_more_time">More time.</string>
    <string name="accessibility_no_calling">No calling.</string>
    <string name="accessibility_no_data">No data.</string>
    <string name="accessibility_no_phone">No phone.</string>
    <string name="accessibility_no_wifi">Wifi disconnected.</string>
    <string name="accessibility_phone_one_bar">Phone one bar.</string>
    <string name="accessibility_phone_signal_full">Phone signal full.</string>
    <string name="accessibility_phone_three_bars">Phone three bars.</string>
    <string name="accessibility_phone_two_bars">Phone two bars.</string>
    <string name="accessibility_wifi_off">Wifi off.</string>
    <string name="accessibility_wifi_one_bar">Wifi one bar.</string>
    <string name="accessibility_wifi_security_type_none">Open network</string>
    <string name="accessibility_wifi_security_type_secured">Secure network</string>
    <string name="accessibility_wifi_signal_full">Wifi signal full.</string>
    <string name="accessibility_wifi_three_bars">Wifi three bars.</string>
    <string name="accessibility_wifi_two_bars">Wifi two bars.</string>
    <string name="accessibility_work_profile_app_description">Work %s</string>
    <string name="accessor_expires_text">Lease expires at %s</string>
    <string name="accessor_info_title">Apps sharing data</string>
    <string name="accessor_no_description_text">No description provided by the app.</string>
    <string name="active_input_method_subtypes">Active input methods</string>
    <string name="adb_device_fingerprint_title_format">Device fingerprint: %1$s</string>
    <string name="adb_device_forget">Forget</string>
    <string name="adb_disabled_summary">Turn off USB debugging when entering a game</string>
    <string name="adb_disabled_title">Disable USB debugging</string>
    <string name="adb_keys_warning_message">Revoke access to USB debugging from all computers you’ve previously authorized?</string>
    <string name="adb_pair_method_code_summary">Pair new devices using six digit code</string>
    <string name="adb_pair_method_code_title">Pair device with pairing code</string>
    <string name="adb_pair_method_qrcode_summary">Pair new devices using QR code scanner</string>
    <string name="adb_pair_method_qrcode_title">Pair device with QR code</string>
    <string name="adb_paired_devices_title">Paired devices</string>
    <string name="adb_pairing_device_dialog_failed_msg">Make sure the device is connected to the same network.</string>
    <string name="adb_pairing_device_dialog_failed_title">Pairing unsuccessful</string>
    <string name="adb_pairing_device_dialog_pairing_code_label">Wi‑Fi pairing code</string>
    <string name="adb_pairing_device_dialog_title">Pair with device</string>
    <string name="adb_qrcode_pairing_device_failed_msg">Failed to pair the device. Either the QR code was incorrect, or the device is not connected to the same network.</string>
    <string name="adb_warning_message">USB debugging is intended for development purposes only. Use it to copy data between your computer and your device, install apps on your device without notification, and read log data.</string>
    <string name="adb_warning_title">Allow USB debugging?</string>
    <string name="adb_wireless_connection_failed_message">Make sure %1$s is connected to the correct network</string>
    <string name="adb_wireless_connection_failed_title">Connection unsuccessful</string>
    <string name="adb_wireless_device_connected_summary">Currently connected</string>
    <string name="adb_wireless_device_details_title">Device details</string>
    <string name="adb_wireless_error">Error</string>
    <string name="adb_wireless_ip_addr_preference_title">IP address &amp; Port</string>
    <string name="adb_wireless_list_empty_off">To see and use available devices, turn on wireless debugging</string>
    <string name="adb_wireless_no_network_msg">Please connect to a Wi‑Fi network</string>
    <string name="adb_wireless_qrcode_pairing_description">Pair device over Wi‑Fi by scanning a QR code</string>
    <string name="adb_wireless_qrcode_pairing_title">Scan QR code</string>
    <string name="adb_wireless_qrcode_summary">Pair device over Wi‑Fi by scanning a QR code</string>
    <string name="adb_wireless_settings">Wireless debugging</string>
    <string name="adb_wireless_verifying_qrcode_text">Pairing device…</string>
    <string name="adbwifi_warning_message">Wireless debugging is intended for development purposes only. Use it to copy data between your computer and your device, install apps on your device without notification, and read log data.</string>
    <string name="adbwifi_warning_title">Allow wireless debugging?</string>
    <string name="add_guest_failed">Failed to create a new guest</string>
    <string name="add_user_failed">Failed to create a new user</string>
    <string name="alarm_template">at %1$s</string>
    <string name="alarm_template_far">on %1$s</string>
    <string name="alarms_and_reminders_footer_title">"Allow this app to set alarms and schedule time-sensitive actions. This lets the app run in the background, which may use more battery.

If this permission is off, existing alarms and time-based events scheduled by this app won’t work."</string>
    <string name="alarms_and_reminders_label">Alarms and reminders</string>
    <string name="alarms_and_reminders_switch_title">Allow setting alarms and reminders</string>
    <string name="alarms_and_reminders_title">Alarms &amp; reminders</string>
    <string name="allow_mock_location">Allow mock locations</string>
    <string name="allow_mock_location_summary">Allow mock locations</string>
    <string name="allow_turn_screen_on">Allow turning the screen on</string>
    <string name="allow_turn_screen_on_description">Allow an app to turn the screen on. If granted, the app may turn on the screen at any time without your explicit intent.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animator_duration_scale_title">Animator duration scale</string>
    <string name="apn_settings_not_available">Access Point Name settings are not available for this user</string>
    <string name="app_process_limit_title">Background process limit</string>
    <string name="app_search_title">Search</string>
    <string name="app_selector_label">Pick your game</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arrow_down">↓</string>
    <string name="arrow_right">→</string>
    <string name="auto_brightness_disabled_summary">Turn off automatic brightness when entering a game</string>
    <string name="auto_brightness_disabled_title">Disable auto-brightness</string>
    <string name="available_via_carrier">Available via %1$s</string>
    <string name="available_via_passpoint">Available via %1$s</string>
    <string name="avatar_picker_title">Choose a profile picture</string>
    <string name="disable_options_category_title">Disable options</string>
    <string name="game_list_title">Game list</string>
    <string name="gamespace_menu_opacity_title">Overlay menu opacity level</string>
    <string name="gamespace_show_overlay_summary">Show a floating button which opens a window with quick actions on tap</string>
    <string name="gamespace_show_overlay_title">Enable overlay menu</string>
    <string name="in_game_calls_title">In-game call</string>
    <string name="in_game_notifications_title">In-game notifications</string>
    <string name="in_game_overlay_category_title">In-game overlay</string>
    <string name="lock_gesture_summary">Block fullscreen gestures until swiped twice</string>
    <string name="lock_gesture_title">Lock gesture</string>
    <string name="lock_status_bar_summary">To enable status bar, swipe from screen sides</string>
    <string name="lock_status_bar_title">Block status bar swipe</string>
    <string name="misc_options_category_title">Misc options</string>
    <string name="notification_options_category_title">Notification options</string>
    <string name="per_app_angle_summary">"Using ANGLE renderer instead of native GLES drivers.
WARNING!! May breaks game graphics, use with caution!"</string>
    <string name="per_app_angle_title">Use ANGLE (experimental)</string>
    <string name="per_app_mode_title">Preferred mode</string>
    <string name="quick_launch_apps_summary">Choose the apps you want to quick launch in games</string>
    <string name="quick_launch_apps_title">Quick launch apps</string>
    <string name="ringer_mode_title">Ringer mode</string>
    <string name="stay_awake_summary">Do not turn off screen automatically in games</string>
    <string name="stay_awake_title">Stay awake</string>
    <string name="suppress_fullscreen_intent_summary">Prevent fullscreen events like incoming calls from appearing</string>
    <string name="suppress_fullscreen_intent_title">Block fullscreen event</string>
    <string name="three_screenshot_disabled_summary">Turn off swipe to screenshot when entering a game</string>
    <string name="three_screenshot_disabled_title">Disable swipe to screenshot</string>
</resources>